Basic Setup of all pages

--- a/IDSW header.html
+++ b/IDSW header.html
@@ -25,19 +25,20 @@
           <a href="IDSW membership.html" role="menuitem">Membership Benefits</a>
           <a href="IDSW apply.html" role="menuitem">Membership Application</a>
           <a href="IDSW renew.html" role="menuitem">Membership Renewal</a>
-          <a href="IDSW members.html" role="menuitem">Member Directory</a>
+          <a href="IDSW members.html" role="menuitem" class="member-only-link">Member Directory</a>
         </div>
       </div>
 
       <!-- Directory -->
       <div class="nav-item has-dropdown">
-        <a class="nav-link" href="IDSW members.html" aria-haspopup="true" aria-expanded="false">Directory</a>
+        <a class="nav-link" href="IDSW directories.html" aria-haspopup="true" aria-expanded="false">Directories</a>
         <div class="dropdown" role="menu" aria-label="Directory submenu">
           <a href="IDSW leadership.html" role="menuitem">Leadership</a>
-          <a href="IDSW members.html" role="menuitem">Members</a>
+          <a href="IDSW members.html" role="menuitem" class="member-only-link">Members</a>
           <a href="IDSW practices.html" role="menuitem">ID Practices</a>
-          <a href="IDSW micro-labs.html" role="menuitem">Micro Labs</a>
-          <a href="training.html" role="menuitem">Training Programs</a>
+          <a href="IDSW micro-labs.html" role="menuitem"class="member-only-link">Micro Labs</a>
+          <a href="IDSW training.html" role="menuitem">Training Programs</a>
+          <a href="IDSW research.html" role="menuitem"class="member-only-link">Research</a>
         </div>
       </div>
   
@@ -46,7 +47,7 @@
       <div class="nav-item has-dropdown">
         <a class="nav-link" href="IDSW resources.html" aria-haspopup="true" aria-expanded="false">Resources</a>
         <div class="dropdown" role="menu" aria-label="Resources submenu">
-          <a href="IDSW AMS.html" role="menuitem">Antimicrobial Stewardship</a>
+          <a href="IDSW AMS.html" role="menuitem" class="member-only-link">Antimicrobial Stewardship</a>
         </div>
       </div>
 
@@ -56,14 +57,14 @@
         <div class="dropdown" role="menu" aria-label="Ask the Expert submenu">
           <a href="IDSW faq.html" role="menuitem">FAQ</a>
           <a href="IDSW invite.html" role="menuitem">Invite an ID Specialist</a>
-          <a href="specialist.html" role="menuitem">Find a Specialist</a>
+          <a href="IDSW practices.html" role="menuitem">Find a Specialist</a>
         </div>
       </div>
   
 
       <!-- Meetings -->
       <div class="nav-item has-dropdown">
-        <a class="nav-link" href="IDSW Events" aria-haspopup="true" aria-expanded="false">Events</a>
+        <a class="nav-link" href="IDSW events-upcoming.html" aria-haspopup="true" aria-expanded="false">Events</a>
         <div class="dropdown" role="menu" aria-label="Events submenu">
           <a href="IDSW events-upcoming.html" role="menuitem">Upcoming Events</a>
           <a href="IDSW events-past.html" role="menuitem">Past Events</a>
@@ -72,16 +73,17 @@
 
       <!-- Advocacy -->
       <div class="nav-item has-dropdown">
-        <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false">Advocacy</a>
+        <a class="nav-link" href="IDSW advocacy.html" aria-haspopup="true" aria-expanded="false">Advocacy</a>
         <div class="dropdown" role="menu" aria-label="Advocacy submenu">
-          <a href="policy.html" role="menuitem">Policy Positions</a>
-          <a href="IDSW submit-story.html" role="menuitem">Submit a Story</a>
+          <a href="IDSW policy.html" role="menuitem">Policy Positions</a>
+          <a href="IDSW advocacy-actions.html" role="menuitem">Advocacy Actions</a>
+          <a href="IDSW submit-story.html" role="menuitem"  class="member-only-link">Submit a Story</a>
         </div>
       </div>
   
       <!-- Contact -->
       <div class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
+        <a class="nav-link" href="IDSW contact.html">Contact</a>
       </div>
   
       <button class="btn-login">Log In</button>
