--- a/IDSW Home Page.html
+++ b/IDSW Home Page.html
@@ -5,38 +5,94 @@
   <title>IDSW – Infectious Diseases Society of Washington</title>
   <link rel="stylesheet" href="IDSW style.css">
   <style>
-    /* .btn-green, .btn-secondary*/
-
     /* Hero section */
     .hero {
-      background: var(--card-bg);
-      border-radius: 16px;
-      padding: 40px 40px 32px;
+      background: linear-gradient(135deg, #ffffff 0%, #f8fbf9 100%);
+      border-radius: 18px;
+      padding: 42px 40px 34px;
       box-shadow: var(--shadow);
       margin-bottom: 24px;
+      border: 1px solid rgba(0,0,0,0.05);
     }
 
     .hero h1 {
-      font-size: 32px;
-      margin-bottom: 16px;
+      font-size: 34px;
+      line-height: 1.15;
+      margin-bottom: 14px;
       color: var(--brand-ink);
+      max-width: 780px;
     }
 
     .hero p {
       font-size: 18px;
-      line-height: 1.5;
+      line-height: 1.6;
       margin-bottom: 24px;
-      max-width: 700px;
+      max-width: 760px;
+      color: var(--text);
     }
 
     .hero-buttons {
       display: flex;
       flex-wrap: wrap;
+      gap: 14px;
+    }
+
+    .hero-buttons a {
+      text-decoration: none;
+    }
+
+    /* Feature cards */
+    .features {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
       gap: 16px;
+      margin-bottom: 24px;
+    }
+
+    .feature-card {
+      display: block;
+      background: var(--card-bg);
+      border-radius: 16px;
+      padding: 22px 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.03);
+      border: 1px solid rgba(0,0,0,0.06);
+      text-decoration: none;
+      transition: transform 0.15s ease, box-shadow 0.15s ease, border-color 0.15s ease, background-color 0.15s ease;
+    }
+
+    .feature-card:hover,
+    .feature-card:focus {
+      transform: translateY(-2px);
+      background: #f7fbff;
+      box-shadow: 0 10px 24px rgba(0,0,0,0.06);
+      border-color: rgba(31, 74, 138, 0.16);
+      outline: none;
+    }
+
+    .feature-card h3 {
+      font-size: 20px;
+      margin-bottom: 8px;
+      color: var(--brand-ink);
+    }
+
+    .feature-card p {
+      font-size: 15px;
+      line-height: 1.55;
+      margin-bottom: 12px;
+      color: var(--muted);
+    }
+
+    .feature-tag {
+      display: inline-block;
+      font-size: 12px;
+      font-weight: 600;
+      padding: 4px 10px;
+      border-radius: 999px;
+      background: var(--tag-bg);
+      color: var(--brand);
     }
 
     /* Invite panel */
-    
     .invite-panel {
       background: var(--card-bg);
       border-radius: 16px;
@@ -47,7 +103,7 @@
       align-items: center;
       justify-content: space-between;
       gap: 24px;
-      margin-bottom: 40px;
+      margin-bottom: 24px;
     }
 
     .invite-panel-text {
@@ -62,9 +118,9 @@
 
     .invite-panel p {
       font-size: 15px;
-      line-height: 1.5;
+      line-height: 1.55;
       margin-bottom: 10px;
-      max-width: 650px;
+      max-width: 680px;
     }
 
     .invite-panel ul {
@@ -73,7 +129,7 @@
       margin-bottom: 0;
       padding-left: 0;
       font-size: 14px;
-      line-height: 1.5;
+      line-height: 1.6;
     }
 
     .invite-panel ul li::before {
@@ -90,36 +146,75 @@
       gap: 8px;
     }
 
+    .invite-panel-cta a {
+      text-decoration: none;
+    }
+
     .invite-note {
       font-size: 12px;
       color: var(--muted);
-      max-width: 220px;
+      max-width: 240px;
+      line-height: 1.5;
     }
 
-
-    /* Latest strip */
+    /* Latest section */
     .latest {
       background: var(--card-bg);
       border-radius: 16px;
-      padding: 24px 24px 30px;
+      padding: 24px 24px 28px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.03);
+      border: 1px solid rgba(0,0,0,0.06);
     }
 
     .latest h2 {
       font-size: 22px;
-      margin-bottom: 10px;
+      margin-bottom: 14px;
       color: var(--brand-ink);
     }
 
-    .latest p {
-      font-size: 15px;
-      line-height: 1.5;
+    .latest-grid {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 14px;
     }
 
+    .latest-item {
+      border-radius: 14px;
+      background: #fafafa;
+      border: 1px solid rgba(0,0,0,0.05);
+      padding: 16px;
+    }
+
+    .latest-label {
+      font-size: 12px;
+      font-weight: 700;
+      text-transform: uppercase;
+      letter-spacing: 0.04em;
+      color: var(--brand);
+      margin-bottom: 6px;
+    }
+
+    .latest-item h3 {
+      font-size: 17px;
+      margin-bottom: 6px;
+      color: var(--brand-ink);
+    }
+
+    .latest-item p {
+      font-size: 14px;
+      line-height: 1.5;
+      color: var(--muted);
+      margin-bottom: 10px;
+    }
+
+    .latest-item a {
+      text-decoration: none;
+    }
 
     /* Simple responsiveness */
     @media (max-width: 900px) {
-      .features {
+      .features,
+      .latest-grid {
         grid-template-columns: 1fr;
       }
       
@@ -132,6 +227,18 @@
         width: 100%;
         align-items: flex-start;
       }
+
+      .hero {
+        padding: 32px 24px 28px;
+      }
+
+      .hero h1 {
+        font-size: 28px;
+      }
+
+      .hero p {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -142,55 +249,50 @@
 <main>
   <!-- Hero -->
   <section class="hero">
-    <h1>Supporting Infectious Diseases Professionals in Washington</h1>
+    <h1>Supporting Infectious Diseases Professionals Across Washington State</h1>
     <p>
-      Connecting clinicians, elevating stories from the front lines, and advancing policy that
-      protects patients and communities across Washington State.
+      IDSW connects clinicians, supports education and collaboration, and helps elevate the real-world issues shaping infectious diseases care, prevention, and public health in Washington.
     </p>
     <div class="hero-buttons">
-      <button class="btn-green">Learn about IDSW</button>
-      <button class="btn-secondary">Become a Member</button>
-      <button class="btn-secondary">Log In</button>
+      <a href="IDSW about.html" class="btn-green">Learn About IDSW</a>
+      <a href="IDSW membership.html" class="btn-secondary">Become a Member</a>
+      <a href="#" class="btn-secondary">Log In</a>
     </div>
   </section>
 
   <!-- Feature cards -->
   <section class="features">
-    <article class="feature-card">
-      <h3>Member Directory</h3>
+    <a href="IDSW directories.html" class="feature-card">
+      <h3>Directories</h3>
       <p>
-        Find colleagues across Washington for shared patients and subject-matter expertise in
-        infectious diseases.
+        Explore IDSW directories for members, practices, microbiology labs, training programs, and research opportunities across Washington.
       </p>
-      <span class="feature-tag">Members-only</span>
-    </article>
+      <span class="feature-tag">Members and public resources</span>
+    </a>
 
-    <article class="feature-card">
+    <a href="IDSW submit-story.html" class="feature-card">
       <h3>Story Collection</h3>
       <p>
-        Share real-world experiences that highlight system gaps and opportunities to strengthen
-        ID care in our state.
+        Share real-world experiences that highlight system gaps, policy challenges, and opportunities to strengthen infectious diseases care statewide.
       </p>
       <span class="feature-tag">Powered by members</span>
-    </article>
+    </a>
 
-    <article class="feature-card">
+    <a href="IDSW advocacy.html" class="feature-card">
       <h3>Policy &amp; Advocacy</h3>
       <p>
-        See how IDSW engages on key issues, from antimicrobial stewardship to workforce and
-        access to care.
+        See IDSW’s policy priorities, advocacy actions, and member-informed efforts to improve access, prevention, stewardship, and public health.
       </p>
-      <span class="feature-tag">Coming soon</span>
-    </article>
+      <span class="feature-tag">Advocacy and action</span>
+    </a>
   </section>
 
   <!-- Invite an ID professional -->
   <section class="invite-panel">
     <div class="invite-panel-text">
-      <h2>Request an ID Professional for Your Group</h2>
+      <h2>Request an ID Specialist for Your Group</h2>
       <p>
-        Looking for an infectious diseases expert to speak with your team, trainees, or community?
-        IDSW can help connect you with clinicians who regularly talk with:
+        Looking for an infectious diseases professional to speak with your team, trainees, or community organization? IDSW can help connect you with specialists experienced in outreach and education.
       </p>
       <ul>
         <li>Hospital and clinic teams</li>
@@ -200,9 +302,9 @@
       </ul>
     </div>
     <div class="invite-panel-cta">
-      <button class="btn-green">Request a Speaker</button>
+      <a href="IDSW invite.html" class="btn-green">Request a Speaker</a>
       <p class="invite-note">
-        Share a few details about your audience, topic, and preferred dates, and we’ll follow up with next steps.
+        Share your audience, topic, and preferred timing, and IDSW can help route your request.
       </p>
     </div>
   </section>
@@ -210,10 +312,26 @@
   <!-- Latest from IDSW -->
   <section class="latest">
     <h2>Latest from IDSW</h2>
-    <p>
-      Upcoming event: <strong>[Placeholder – IDSW Meeting Title]</strong><br>
-      Advocacy update: <strong>[Brief description of an issue or action alert]</strong>
-    </p>
+
+    <div class="latest-grid">
+      <div class="latest-item">
+        <div class="latest-label">Upcoming Event</div>
+        <h3>[Placeholder – IDSW Meeting Title]</h3>
+        <p>
+          Add a brief event summary here, including the date, format, and why members may want to attend.
+        </p>
+        <a href="IDSW events-upcoming.html" class="btn-secondary">View Events</a>
+      </div>
+
+      <div class="latest-item">
+        <div class="latest-label">Advocacy Update</div>
+        <h3>[Placeholder – Current Issue or Action]</h3>
+        <p>
+          Add a short note about a recent advocacy update, policy issue, or action the organization wants to highlight.
+        </p>
+        <a href="IDSW advocacy-actions.html" class="btn-secondary">View Advocacy</a>
+      </div>
+    </div>
   </section>
 </main>
 
@@ -239,7 +357,6 @@
       document.getElementById("site-footer").innerHTML = html;
     })
     .catch(err => console.error(err));
-
 </script>
 
 </body>
