Update Homepage further
Change IDSW Home page to index for display purposes

--- a/IDSW header.html
+++ b/IDSW header.html
@@ -1,6 +1,6 @@
 <header>
     <div class="logo-wrap">
-        <a href="IDSW%20Home%20Page.html" class="logo-link" aria-label="Go to IDSW Home Page">
+        <a href="index.html" class="logo-link" aria-label="Go to IDSW Home Page">
           <img src="IDSW - Long side text on green.png" alt="Infectious Diseases Society of Washington logo">
         </a>
       </div>
